--- a/rebar.config
+++ b/rebar.config
@@ -1,1 +1,3 @@
-{eunit_opts, [verbose, {src_dir, ["test"]}]}.
+{deps, [{getopt, ".*", {git, "https://github.com/jcomellas/getopt.git", "master"}}]}.
+{eunit_exclude_deps, true}.
+{eunit_opts, [verbose]}.
