fixing typeo + unit tests

--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,4 @@
 {deps, [{getopt, ".*", {git, "https://github.com/jcomellas/getopt.git", "master"}}]}.
+{src_dirs, ["test"]}.
 {eunit_exclude_deps, true}.
 {eunit_opts, [verbose]}.
